oh yeah got rid of dummy test data whoop
