# instructor_view/views.py
@@ -6,11 +6,6 @@ Generated by 'django-admin startApp instructor_view' using Django 4.2.4.
 
 import json
 from django.shortcuts import render
-from django.http import JsonResponse, HttpResponseBadRequest
-from django.views.decorators.csrf import csrf_exempt
-
-# as this will be deleted when fully attached, i wont bother doing the imports the long way
-from canvas_app.tests import *
 
 def not_found_view(request):
     '''View not found'''
@@ -29,7 +24,12 @@ def review_req_view(request, thread_id):
     return render(request, 'reviewRequest.html', {'thread_id': thread_id})
 
 def view_reqs_view(request, id):
-    return render(request, 'viewRequests.html', {'course': json.dumps(course31)})
+    return render(request, 'viewRequests.html', 
+                  {'course': json.dumps({
+                        'course_id': '31',
+                        'course_name': 'IT Project',
+                        'course_code': 'COMP30022',
+                    })})
 
 def view_resolved_view(request, thread_id):
     '''View resolved requests'''
@@ -39,50 +39,13 @@ def view_resolved_view(request, thread_id):
 def subj_settings_view(request, input_id):
     '''View for subject preferences'''
     # Check the ID exists
-    req = json.dumps(course31)
-    print(input_id)
+    req = json.dumps({
+        'course_id': '31',
+        'course_name': 'IT Project',
+        'course_code': 'COMP30022',
+    })
     return render(request, 'subjectSettings.html', {'req':req})
-    # elif input_id == course32['course_id']:
-    #     req = json.dumps(course32)
-    #     return render(request, 'subjectSettings.html', {'req':req})
-    # else:
-    #     return JsonResponse({'error': 'Record not found'}, status=404)
 
 def view_profile_view(request, user_id):
     '''View for student profile'''
-    
     return render(request, 'viewProfile.html', {'user_id':user_id})
-
-
-# GET REQUESTS
-# test/example purposes only, obviously not useable, must be filled in by backend
-def get_student(request, student_id):
-    '''GET a student by id'''
-    if student_id == 3:
-        return JsonResponse({
-            'user_id': 3,
-            'name' : 'Ryan Goh',
-            'first_name': 'Ryan',
-            'last_name': 'Goh',
-            'email': 'insertEmailHereLol@student.unimelb.edu.au',
-            'email_preference': 1,
-            'darkmode_preference': 1,
-        })
-    # id not found
-    return not_found_view(request)
-
-def get_threads_pending(request, course_id):
-    ''' Gets the pending threads belonging to a course '''
-
-    # just pretending here that they are specific to a course haha
-    return JsonResponse({
-            'threads': json.dumps([thread11, thread12])
-        })
-
-def get_threads_resolved(request, course_id):
-    ''' Gets the resolved (not pending) threads belonging to a course '''
-
-    # just pretending here that they are specific to a course haha
-    return JsonResponse({
-            'threads': json.dumps([thread13])
-        })
